--- a/package.json
+++ b/package.json
@@ -22,5 +22,12 @@
     "discord.js": "^13.5.1",
     "dotenv": "^10.0.0",
     "module-alias": "^2.2.2"
+  },
+  "_moduleAliases": {
+    "@root": ".",
+    "@src": "./src",
+    "@commands": "./src/commands",
+    "@config": "./src/config",
+    "@events": "./src/events"
   }
 }
